@@ -20,8 +20,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <google.adk.version>0.5.0</google.adk.version>
   </properties>
   <developers>
     <developer>
@@ -40,156 +38,29 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.4.3</version>
-    <!-- 可配置 ai 2.0.0-M2 升级 + skills spring-ai-agent-utils 升级使用 -->
-    <!--<version>4.1.0-M1</version>-->
+    <version>4.1.1</version>
   </parent>
   <dependencyManagement>
     <dependencies>
+      <!-- 平台共享依赖版本收敛（本地 mvn install 消费，见 platform-bom/） -->
       <dependency>
-        <groupId>org.mybatis.spring.boot</groupId>
-        <artifactId>mybatis-spring-boot-starter</artifactId>
-        <version>3.0.4</version>
-      </dependency>
-      <!-- # 多数据源路由配置
-                 # mysql 5.x driver-class-name: com.mysql.jdbc.Driver    mysql-connector-java 5.1.34
-                 # mysql 8.x driver-class-name: com.mysql.cj.jdbc.Driver mysql-connector-j 8.0.33-->
-      <dependency>
-        <groupId>com.mysql</groupId>
-        <artifactId>mysql-connector-j</artifactId>
-        <version>8.0.33</version>
-      </dependency>
-      <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>fastjson</artifactId>
-        <version>2.0.28</version>
-      </dependency>
-      <!-- FastJSON2 -->
-      <dependency>
-        <groupId>com.alibaba.fastjson2</groupId>
-        <artifactId>fastjson2</artifactId>
-        <version>2.0.52</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-lang3</artifactId>
-        <version>3.9</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>32.1.3-jre</version>
-      </dependency>
-      <dependency>
-        <groupId>com.auth0</groupId>
-        <artifactId>java-jwt</artifactId>
-        <version>4.4.0</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-codec</groupId>
-        <artifactId>commons-codec</artifactId>
-        <version>1.15</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.adk</groupId>
-        <artifactId>google-adk</artifactId>
-        <version>${google.adk.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.adk</groupId>
-        <artifactId>google-adk-dev</artifactId>
-        <version>${google.adk.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.adk</groupId>
-        <artifactId>google-adk-spring-ai</artifactId>
-        <version>${google.adk.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.adk.samples</groupId>
-        <artifactId>google-adk-sample-helloworld</artifactId>
-        <version>${google.adk.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.adk</groupId>
-        <artifactId>google-adk-contrib-langchain4j</artifactId>
-        <version>0.2.0</version>
-      </dependency>
-      <!--            <dependency>-->
-      <!--                <groupId>dev.langchain4j</groupId>-->
-      <!--                <artifactId>langchain4j-core</artifactId>-->
-      <!--                <version>1.4.0</version>-->
-      <!--            </dependency>-->
-      <!--            <dependency>-->
-      <!--                <groupId>dev.langchain4j</groupId>-->
-      <!--                <artifactId>langchain4j-open-ai</artifactId>-->
-      <!--                <version>1.4.0</version>-->
-      <!--            </dependency>-->
-      <!-- spring ai 1.1.0 https://central.sonatype.com/artifact/org.springframework.ai/spring-ai-bom -->
-      <dependency>
-        <groupId>org.springframework.ai</groupId>
-        <artifactId>spring-ai-bom</artifactId>
-        <version>1.1.0-M3</version>
+        <groupId>cn.chyuan.ai</groupId>
+        <artifactId>platform-bom</artifactId>
+        <version>1.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!-- 可升级配置使用 -->
-      <!--<dependency>
-                <groupId>org.springframework.ai</groupId>
-                <artifactId>spring-ai-openai</artifactId>
-                <version>2.0.0-M2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.ai</groupId>
-                <artifactId>spring-ai-model</artifactId>
-                <version>2.0.0-M2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.ai</groupId>
-                <artifactId>spring-ai-mcp</artifactId>
-                <version>2.0.0-M2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.ai</groupId>
-                <artifactId>spring-ai-starter-mcp-client-webflux</artifactId>
-                <version>2.0.0-M2</version>
-            </dependency>-->
-      <!-- langchain4j https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-bom -->
+      <!-- Retrofit2（网关协议映射 HTTP 客户端） -->
       <dependency>
-        <groupId>dev.langchain4j</groupId>
-        <artifactId>langchain4j-bom</artifactId>
-        <version>1.4.0</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <!-- https://github.com/spring-ai-community/spring-ai-agent-utils -->
-      <dependency>
-        <groupId>org.springaicommunity</groupId>
-        <artifactId>spring-ai-agent-utils</artifactId>
-        <version>0.4.2</version>
+        <groupId>com.squareup.retrofit2</groupId>
+        <artifactId>retrofit</artifactId>
+        <version>2.9.0</version>
       </dependency>
       <!-- 设计模式框架 -->
       <dependency>
         <groupId>cn.bugstack.wrench</groupId>
         <artifactId>xfg-wrench-starter-design-framework</artifactId>
         <version>3.0.0</version>
-      </dependency>
-      <!-- Reactor -->
-      <dependency>
-        <groupId>io.projectreactor</groupId>
-        <artifactId>reactor-core</artifactId>
-        <version>3.7.3</version>
-      </dependency>
-      <!-- Retrofit2 + OkHttp -->
-      <dependency>
-        <groupId>com.squareup.retrofit2</groupId>
-        <artifactId>retrofit</artifactId>
-        <version>2.9.0</version>
-      </dependency>
-      <dependency>
-        <groupId>com.squareup.okhttp3</groupId>
-        <artifactId>okhttp</artifactId>
-        <version>4.12.0</version>
       </dependency>
       <!-- 工程模块 -->
       <dependency>
@@ -280,21 +151,21 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <java_jvm>-Xms1G -Xmx1G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=dev -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-agent-scaffold-lite-boot -Xloggc:/export/Logs/ai-agent-scaffold-lite-boot/gc-ai-agent-scaffold-lite-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
+        <java_jvm>-Xms1G -Xmx1G -server -Xss256K -Dspring.profiles.active=dev -XX:+DisableExplicitGC -XX:+UseG1GC -XX:HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-agent-scaffold-lite-boot -Xlog:gc*:file=/export/Logs/ai-agent-scaffold-lite-boot/gc-ai-agent-scaffold-lite-boot.log:time,uptime,level,tags</java_jvm>
         <profileActive>dev</profileActive>
       </properties>
     </profile>
     <profile>
       <id>test</id>
       <properties>
-        <java_jvm>-Xms1G -Xmx1G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=test -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-agent-scaffold-lite-boot -Xloggc:/export/Logs/ai-agent-scaffold-lite-boot/gc-ai-agent-scaffold-lite-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
+        <java_jvm>-Xms1G -Xmx1G -server -Xss256K -Dspring.profiles.active=test -XX:+DisableExplicitGC -XX:+UseG1GC -XX:HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-agent-scaffold-lite-boot -Xlog:gc*:file=/export/Logs/ai-agent-scaffold-lite-boot/gc-ai-agent-scaffold-lite-boot.log:time,uptime,level,tags</java_jvm>
         <profileActive>test</profileActive>
       </properties>
     </profile>
     <profile>
       <id>prod</id>
       <properties>
-        <java_jvm>-Xms6G -Xmx6G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=release -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/fq-mall-activity-app -Xloggc:/export/Logs/ai-agent-scaffold-lite-boot/gc-ai-agent-scaffold-lite-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
+        <java_jvm>-Xms6G -Xmx6G -server -Xss256K -Dspring.profiles.active=release -XX:+DisableExplicitGC -XX:+UseG1GC -XX:HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/fq-mall-activity-app -Xlog:gc*:file=/export/Logs/ai-agent-scaffold-lite-boot/gc-ai-agent-scaffold-lite-boot.log:time,uptime,level,tags</java_jvm>
         <profileActive>prod</profileActive>
       </properties>
     </profile>
